tests/compile-fail/ident_disambiguation/binding_shadows_constant.rs
fn main() {
    const foo: i32 = 0;
    try_match::try_match!(42, foo);
}
